complete crud and add complicated jpqls